objects/Customer_Segmentation_Team__c.object
<CustomObject>
    <description>R5 - Customer Segmentation Team</description>
    <fields>
        <fullName>Access__c</fullName>
        <description>R5 - Access</description>
        <label>Access</label>
        <picklist>
            <picklistValues>
                <fullName>Read/Write</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <description>R5-BU</description>
        <formula>LEFT(TEXT(User__r.Business_Unit_BU__c ), 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>R5-Country</description>
        <formula>User__r.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Segment_Owner_ID__c</fullName>
        <formula>CASESAFEID( Customer_Segmentation__r.OwnerId )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Segment Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Segmentation__c</fullName>
        <description>R5 - Master-Detail Relationship with Customer Segmentation.</description>
        <label>Customer Segmentation</label>
        <referenceTo>Customer_Segmentation__c</referenceTo>
        <relationshipName>Customer_Segmentation_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <description>R5 - Team Role</description>
        <inlineHelpText>Role in ABB organization</inlineHelpText>
        <label>Team Role</label>
        <picklist>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Service Responsible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAM/SAM Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Sales Marketing Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Sales Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Responsible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Support</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Lookup to User.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Segmentation_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>of_Account_Segmentation_Teams__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of Account Segmentation Teams</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Segmentation Team</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CS - TEAMROLE - {0000}</displayFormat>
        <label>Customer Segmentation Team Role</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Segmentation Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>